--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "MIT",
   "main": "index.js",
   "engines": {
-    "node": "^6.0.0",
+    "node": ">=6.0.0",
     "npm": ">=3.0.0"
   },
   "dependencies": {
