--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "colors": "~1.1.2",
-    "globby": "~8.0.1",
+    "fast-glob": "~3.1.0",
     "moment": "~2.22.2"
   },
   "peerDependencies": {
